src/App.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

.recharts-wrapper .recharts-cartesian-grid-horizontal line:first-child,
.recharts-wrapper .recharts-cartesian-grid-horizontal line:last-child {
  stroke-opacity: 0;
}

.chart {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 200px;
}

